<resources>
    <string name="app_name">Servicios San Marcos</string>
    <string name="my_app_id">unmsmservicios-scxef</string>

    <string name="close_app">Presione ATRAS otra vez para salir.</string>
    <string name="prompt_email">example@unmsm.edu.pe</string>
    <string name="prompt_password">contraseña</string>
    <string name="title_home">Home</string>
    <string name="title_services">Servicios</string>
    <string name="title_perfil">Mi perfil</string>
    <string name="title_personajes">Personajes</string>

    <string name="logo_de_sm">Logo de sm</string>

    <string name="titulo_iniciarsesion">Iniciar Sesión</string>
    <string name="button_signup">Iniciar sesión</string>
    <string name="button_signin">Crear una cuenta</string>
    <string name="button_signinme">Registrarme</string>
    <string name="button_forgotpass">Olvidé mi contraseña</string>
    <string name="ingresar_como_invitado">Ingresar como Invitado</string>
    <string name="university_services">University Services</string>

    <string name="titulo_mensaje">titulo mensaje</string>

    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_invalid_email_sm">Se solicita: @unmsm.edu.pe</string>
    <string name="error_pass_corta">Contraseña es muy corta</string>
    <string name="error_pass_dif">Contraseñas no coinciden</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="titulo">titulo_registro</string>
    <string name="titulo_registro_user">Registro de usuario</string>
    <string name="correo_institucional">Correo Institucional:</string>
    <string name="usuario_y_contrase_a">Usuario y Contraseña</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="password">Contraseña segura</string>
    <string name="button_termycond">Aceptar términos y condiciones</string>


    <string name="titulo_registro_datos">Registo de datos</string>
    <string name="titulo_datospersonales">Datos personales</string>
    <string name="nombres">Nombres</string>
    <string name="paterno">Primer Apellido</string>
    <string name="materno">Segundo Apellido</string>
    <string name="nombres_completos">Nombres completos</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="c_digo_de_alumno">Código de alumno</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="codigo">codigo</string>
    <string name="carnet_codigo">Carnet codigo</string>
    <string name="title_activity_maps">Map</string>
    <string name="info_del_servicio">info del servicio</string>
    <string name="s_imagen_del_servicio">imagen del servicio</string>
    <string name="titulo_servicio">titulo servicio</string>
    <string name="imagen_del_servicio_de_info">imagen del servicio de info</string>


    <string name="ver_email">Verificación por e-mail</string>
    <string name="verificacion_email">Se ha enviado un link de verificación de registro al correo electrónico que ha ingresado.</string>
    <string name="desp_ver_email">descripcion de verificación</string>
    <string name="titulo_ver_email">titulo de verificación Email</string>
    <string name="no_verify_email">No ha verificado su correo electrónico, demora unos segundos. ¿Desea reenviar el link de verificación?.
</string>
    <string name="men_user_rep">Es posible que este correo electrónico ya esté registrado en el sistema.</string>
    <string name="men_registrar_usuario">Registrar usuario</string>
    <string name="user_pass_inc">Usuario y/o contraseña incorrectos.</string>
    <string name="back">back</string>
    <string name="imgregdates">imgregdates</string>
    <string name="cod_alumno">Código de alumno</string>
    <string name="title_news">Noticias</string>
    <string name="title_activity_location">Map</string>

</resources>
