<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news"/>

    <item
        android:id="@+id/navigation_social_red"
        android:icon="@drawable/icon_personaje_selected"
        android:title="@string/title_personajes"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/nav_profile"
        android:title="@string/title_perfil"/>

</menu>
