<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/id_constraint_register_datos"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_background"
    tools:context=".Activities.DatesRegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardMaxElevation="2dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:id="@+id/back_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:background="@color/color_background"
            tools:ignore="MissingConstraints">
            <ImageView
                android:id="@+id/btnback"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="Registrar datos"
                android:textColor="@color/color_toolbar"
                android:padding="5dp"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/icon_register"
                android:layout_gravity="top"
                android:contentDescription="@string/imgregdates" />

            <TableLayout
                android:id = "@+id/tb_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/icon_name"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_nombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/names"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombres_completos"
                            android:inputType="textPersonName|textCapWords"
                            android:maxLines="1"
                            android:textSize = "16sp"
                            android:singleLine="true"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="10dp"
                            android:importantForAutofill="no"
                            tools:targetApi="o"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/icon_lastname"/>

                    <android.support.design.widget.TextInputLayout
                        android:id = "@+id/input_ap_pat"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/ap_pat"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:imeActionId="5"
                            android:hint="@string/paterno"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPersonName|textCapWords"
                            android:maxLines="1"
                            android:textSize = "16sp"
                            android:singleLine="true"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="10dp"
                            android:importantForAutofill="no"
                            tools:targetApi="o"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/icon_lastname"/>
                    <android.support.design.widget.TextInputLayout
                        android:id = "@+id/input_ap_mat"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/ap_mat"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:imeActionId="5"
                            android:hint="@string/materno"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPersonName|textCapWords"
                            android:maxLines="1"
                            android:textSize = "16sp"
                            android:singleLine="true"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="10dp"
                            android:importantForAutofill="no"
                            tools:targetApi="o"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/id_linearlayout_rd"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id = "@+id/text_codigo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/c_digo_de_alumno"
                        android:layout_gravity="center"
                        android:textSize="17sp"
                        android:gravity="center"
                        android:textColor="@color/color_text"
                        android:fontFamily="sans-serif-condensed"/>

                    <ImageButton
                        android:id = "@+id/btnCod"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@color/color_background"
                        android:contentDescription="@string/carnet_codigo" />

                    <TextView
                        android:id="@+id/r_codigo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize = "20sp"
                        android:focusable="false"
                        android:textStyle="bold"
                        android:background="@android:color/transparent"/>


                </LinearLayout>
            </TableLayout>

            <Button
                android:id="@+id/button_registrar_datos"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/guardar_datos"
                android:textColor="@color/color_background"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:background="@drawable/button_radius"
                android:backgroundTint="@color/color_button_green"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>